k8s/postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: postgres-server-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-server
  template:
   metadata:
     labels:
       app: postgres-server
   spec:
     volumes:
       - name: postgres-storage
         persistentVolumeClaim:
           claimName: database-pvc
     containers:
     - name: postgres
       image: postgres
       ports:
         - containerPort: 5432
       volumeMounts:
         - mountPath: /var/lib/postgresql/data
           name: postgres-storage
           subPath: postgres
