k8s/server-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: node-server-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-server
  template:
   metadata:
     labels:
       app: node-server
   spec:
     containers:
     - name: server
       image: theunrulydev/node-server
       ports:
         - containerPort: 5000
