k8s/worker-depl.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: worker-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-server
  template:
   metadata:
     labels:
       app: worker-server
   spec:
     containers:
     - name: worker
       image: theunrulydev/worker-server
