k8s/client-cluster-ip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: client-app
  ports:
    - port: 3000
      targetPort: 3000
