k8s/postgres-cluster-ip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-server-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: postgres-server
  ports:
    - port: 5432
      targetPort: 5432
