k8s/server-cluster-ip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-cluster-ip-srv
spec:
  type: ClusterIP
  selector:
    app: node-server
  ports:
    - port: 5000
      targetPort: 5000
